--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <h1>Move Me!</h1>
     <div id="box"></div>
-    <button onclick="moveBox()">Move Box</button>
+    <button id="button">Move Box</button>
 </div>
 
 
